5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1875_2873.log
== TEST (2019-07-02 18:10:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
for i in range(l):
	print(max(matriz)[i,:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:12:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
for i in range(l):
	print(max(matriz)[i,:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:13:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
for i in range(b):
	print(max(matriz)[i,:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:24:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
if(r==matriz[0]*matriz[1]):
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:28:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
if(r==a*b):
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:30:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
if(matriz==a*b):
	print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:33:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
if(matriz==a*b):
	print(sun(matriz)
-- ERROR:
File "XXXX", line 8
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:33:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
if(matriz==a*b):
	print(sum(matriz)
-- ERROR:
File "XXXX", line 8
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:34:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
if(matriz==a*b):
	print(sum(matriz))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:37:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
a=0
for i in range(b):
	s=s+a*b
	print(sum(s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:38:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
a=0
for i in range(b):
	s=s+(a*b)
	print(sum(s))
-- EXECUTION TIME:
1.18998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 3, in <module>
    matriz=array(eval(input("digite o numero:")))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:39:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
a=0
for i in range(b):
	s=s+(a*b)
	print(s)
-- EXECUTION TIME:
0.942566
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 3, in <module>
    matriz=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:39:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
a=0
for i in range(b):
	s=s+(a*b)
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:39:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
a=0
for i in range(b):
	s=s+(a*b)
	print(s)
-- EXECUTION TIME:
1.84418
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 3, in <module>
    matriz=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:39:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
a=0
for i in range(b):
	s=s+(a*b)
	print(s)
-- EXECUTION TIME:
3.43392
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1875/2873/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:39:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
a=0
for i in range(b):
	s=s+(a*b)
	print(s)
-- EXECUTION TIME:
3.18586
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 3, in <module>
    matriz=array(eval(input("digite o numero:")))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:40:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
s=0
for i in range(b):
	s=s+(a*b)
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:41:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
s=0
for i in range(b):
	s=s+(a*b)
	print(sum(s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:42:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
s=0
for i in range(b):
	s=s+(a*b)
print(sum(s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:47:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
s=0
for i in range(b):
	s=matriz(1,0)*matriz(1,2)
	r=r+s
	media=s/r
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:49:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
s=0
for i in range(b):
	s=matriz[1,0]*matriz[1,2]
	r=r+s
	media=s/r
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:50:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
s=0
for i in range(b):
	s=matriz[1,0]*matriz[1,3]
	r=r+s
	media=s/r
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:52:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
for i in range(b):
	soma=matriz[1,0]*matriz[1,3]
	r=r+soma
	media=soma/r
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:54:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	r=r+soma
	media=soma/r
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:55:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	b=b+soma
	media=soma/b
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:57:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	b=b+soma
	media=soma/1
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:00:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
e=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	e=e+soma
media=soma/b
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:01:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
e=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	e=e+soma
media=soma/2
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:01:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
e=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	e=e+soma
media=soma/1
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:02:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
e=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	e=e+soma
media=soma/b
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:03:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
e=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	e=e+soma
media=soma/e
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:06:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
e=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	e=e+soma
media=soma/b
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:06:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
e=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	e=e+soma
media=soma/b
print(soma)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:08:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
e=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	e=e+soma
media=soma/b
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:08:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
e=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	e=e+soma
media=e/b
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:09:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
b=matriz.shape[0]
soma=0
e=0
for i in range(b):
	soma=matriz[i,0]*matriz[i,1]
	e=e+soma
media=e/b
print(round(media,2))
-- EXECUTION TIME:
1.15327
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,8.9]]
---- correct output:
45.05
---- user output:
45.05
-- TEST CASE 2:
---- input:
[[6.8,8.2],[5,5],[1.1,2.2]]
---- correct output:
27.73
---- user output:
27.73
-- TEST CASE 3:
---- input:
[[6.8,7.7],[5,6],[6.6,4.4]]
---- correct output:
37.13
---- user output:
37.13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
